make sures master has latest changes

--- a/polymer-sortablejs.html
+++ b/polymer-sortablejs.html
@@ -12,7 +12,7 @@
     is: "sortable-js",
 
     properties: {
-      group             : { type: String, value: function() { return Math.random(); }, observer: "groupChanged" },
+      group             : { type: Object, value: function() { return Math.random(); }, observer: "groupChanged" },
       sort              : { type: Boolean, value: true, observer: "sortChanged" },
       disabled          : { type: Boolean, value: false, observer: "disabledChanged" },
       store             : { type: Object, value: null, observer: "storeChanged" },
@@ -112,6 +112,7 @@
             var from = froms[froms.length-1];
             var item = from.items[e.oldIndex];
             template.splice("items", e.newIndex, 0, item);
+             e.model = model;
           }
           _this.fire("sortable-add", e);
         },
@@ -122,7 +123,9 @@
             return false;
           }
           if (template && !_this.delegateRemove) {
-            template.splice("items", e.oldIndex, 1)[0];
+            var item = template.splice("items", e.oldIndex, 1)[0];
+            e.model = {item: item};
+            // template.splice("items", e.oldIndex, 1)[0];
           }
           _this.fire("sortable-remove", e);
         },
@@ -169,7 +172,12 @@
       }
     },
 
-    groupChanged             : function(value) { this.sortable && this.sortable.option("group", value); },
+    groupChanged             : function(value) { 
+      if(typeof(value) === 'string') {
+        return this.set('group', {name: value});
+      }
+      this.sortable && this.sortable.option("group",  value );
+    },
     sortChanged              : function(value) { this.sortable && this.sortable.option("sort", value); },
     disabledChanged          : function(value) { this.sortable && this.sortable.option("disabled", value); },
     storeChanged             : function(value) { this.sortable && this.sortable.option("store", value); },
