--- a/polymer-sortablejs.html
+++ b/polymer-sortablejs.html
@@ -1,5 +1,5 @@
 <link rel="import" href="../polymer/polymer.html">
-<script src="../Sortable/Sortable.js"></script>
+<script src="../Sortable/Sortable.min.js"></script>
 
 <dom-module id="sortable-js">
   <template>
