upgraded to Polymer 2.0; inluded Sortablejs dependency in build/

--- a/polymer-sortablejs.html
+++ b/polymer-sortablejs.html
@@ -1,9 +1,9 @@
 <link rel="import" href="../polymer/polymer.html">
-<script src="../Sortable/Sortable.min.js"></script>
+<script src="build/Sortable.min.js"></script>
 
 <dom-module id="sortable-js">
   <template>
-    <content></content>
+    <slot></slot>
   </template>
 </dom-module>
 <script>
